Fix user selection options spacing; add styles to form header - WIP

--- a/styles/index.css
+++ b/styles/index.css
@@ -20,17 +20,27 @@ h1 {
     /* Fonts */
     --font-primary: 'DM Sans', sans-serif;
     /* Colors */
-    --gray-light: #efecee;
+    --grey-light: #EFECEE;
+    --grey: #D1D5DB;
+    --purple: #A626D3;
+    --white: #FFF;
+    --black: #000;
 }
 
 body {
     font-family: var(--font-primary);
-    background: var(--gray-light);
+    background: var(--grey-light);
 }
 
 /* --- TYPOGRAPGY --- */
 .title {
     font-size: 1.75em;
+}
+
+input,
+select,
+button {
+    font-family: inherit;
 }
 
 /* --- HEADER --- */
@@ -46,21 +56,28 @@ body {
 /* --- SCHEME GENERATOR HEADER --- */
 .selection-form {
     padding: 0 3em;
+    display: grid;
+    grid-template-columns: repeat(1fr, 12);
+    grid-gap: 1em;
+    grid-template-rows: 50px;
+    align-items: center;
 }
 
 input[type=color] {
-    width: 40px;
-    height: 40px; 
+    width: 50px;
+    height: 50px; 
     border-radius: 50%;
     overflow: hidden;
     padding: 0;
     border: 3px solid white;
     cursor: pointer;
+    margin-left: 6em;
+    grid-column: 1 / 2;
 }
 
 input[type=color]:hover {
-    width: 42px;
-    height: 42px; 
+    width: 52px;
+    height: 52px; 
 }
 
 input[type=color]::-webkit-color-swatch {
@@ -73,4 +90,46 @@ input[type=color]::-webkit-color-swatch-wrapper {
     border: none;
     border-radius: 50%;
     padding: 0;
+}
+
+select {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.scheme-selector {
+    padding: 0.55em 3em 0.55em 1em;
+    grid-column: 2 / 3;
+}
+
+select {
+    background-image: url('/assets/images/icons/caret-down-light.svg');
+    background-size: 26px;
+    background-repeat: no-repeat;
+    background-position: calc(100% - 8px) center;
+}
+
+.submit-btn {
+    margin-right: 10em;
+    cursor: pointer;
+    background: var(--white);
+    color: var(--black);
+    font-weight: 600;
+    grid-column: 7 / 12;
+}
+
+.color-counter {
+    grid-column: 3 / 5;
+}
+
+.color-counter,
+.submit-btn {
+    padding: 0.5em;
+}
+
+.scheme-selector,
+.color-counter,
+.submit-btn {
+    border-radius: 6px;
+    border: 1px solid var(--grey);
 }
